--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,7 @@
   --light-yellow: #fdf4a1;
   --light-green: #f1fbeb;
   --zian-green: #0d3023;
+  --zian-green-active: #1e6f52;
   --grey-lemon-green: #a0bc9f;
   --beige: #fffaec;
   --mint: #e8ffe9;
@@ -155,13 +156,15 @@ header {
 
 .nav {
   display: flex;
+  justify-content: space-evenly;
+  gap: 10px;
   height: 100px;
-  justify-content: center;
   align-items: center;
   padding: 0 20px;
   left: 0;
   right: 0;
-  width: 500px;
+  max-width: 500px;
+  width: 100%;
   margin: 0 auto;
   background-color: rgba(255, 255, 255, 0.05);
   border-radius: 200px;
@@ -173,13 +176,32 @@ header {
 }
 .nav__link {
   color: var(--beige);
-  display: block;
-  padding: 10px 20px;
+  display: inline-block;
   line-height: 1;
-  font-size: 15px;
+  font-size: 1.125rem;
   letter-spacing: 2px;
   text-transform: uppercase;
-  transition: 0.3s all cubic-bezier(0.075, 0.82, 0.165, 1) 0.6s;
+  transition: color 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+  padding: 10px 0;
+  position: relative;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.nav__link::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  width: 0;
+  height: 2px;
+  background-color: var(--beige);
+  transform: translateX(-50%) scaleX(0);
+  transform-origin: center;
+  transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav__link:hover::after {
+  width: 100%;
+  transform: translateX(-50%) scaleX(1);
 }
 
 .button {
@@ -223,8 +245,9 @@ header {
   font-weight: 600;
   width: 100%;
   height: 1200px;
-  background: url(../img/bangkok-2.avif) no-repeat 0% 70%;
+  background: url(../img/bangkok-2.avif) no-repeat 50% 50%;
   background-attachment: fixed;
+  top: 0;
   padding-top: 100px;
 }
 .top::before {
@@ -477,6 +500,22 @@ header {
   width: 100%;
   max-width: 468px;
 }
+.situations__text-wrap {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.situations__text-bottom-wrap {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  width: 100%;
+}
+.situations__line {
+  flex-grow: 1;
+  height: 2px;
+  background-color: var(--dark-grey);
+}
 
 /* Statistics */
 .statistics {
@@ -510,33 +549,23 @@ header {
 }
 
 /* Choose */
-@property --angle {
-  syntax: "<angle>";
-  initial-value: 0deg;
-  inherits: false;
-}
 .choose {
-  display: grid;
-  max-inline-size: 100%;
-  min-block-size: 100svb;
-  overflow-x: clip;
-  padding-block: 80px;
-  place-items: center;
+  padding: var(--block-padding);
+}
+.choose__section {
+  padding: var(--block-padding);
 }
 .choose__wrapper {
   display: grid;
   place-items: center;
+  position: relative;
 }
 .choose__central-block {
   display: grid;
   place-items: center;
   gap: 16px;
   z-index: 2;
-}
-@media (width >= 1024px) {
-  .choose__central-block {
-    grid-area: 1/1;
-  }
+  position: relative;
 }
 .choose__title {
   text-align: center;
@@ -546,128 +575,89 @@ header {
   place-items: center;
   gap: 8px;
 }
-.choose__cards {
-  list-style: none;
-  padding: 0;
-  /* lg-n-below */
-}
-@media (width < 1024px) {
-  .choose__cards {
-    display: grid;
-    grid-auto-flow: column;
-    gap: 32px;
-    max-inline-size: 100%;
-    overflow-x: scroll;
-    padding-block: 32px;
-    padding-inline: 32px;
-  }
-}
-@media (width >= 1024px) {
-  .choose__cards {
-    --avatar-opacity: 1;
-    --avatar-img-scale: 1;
-    --tooltip-visibility: hidden;
-    --tooltip-opacity: 0;
-    --animation-state: running;
-    display: grid;
-    grid-area: 1/1;
-    min-block-size: 700px;
-    place-items: center;
-  }
-  .choose__cards:has(.choose__avatar-link-wrapper:is(:hover, :focus-visible, :active)) {
-    --animation-state: paused;
-    --avatar-opacity: 0.4;
-  }
-}
-.choose__card {
-  padding: 0;
-}
-@media (width >= 1024px) {
-  .choose__card {
-    --radius: min(700px, 40cqi);
-    --offset-per-child: calc(360deg / (var(--nth-siblings) + 1));
-    --angle-offset: calc(var(--nth-child) * var(--offset-per-child));
-    --inline-ratio: 1/1;
-    --block-ratio: 3 / 4;
-    --direction: min(max(calc(cos((var(--angle) + var(--angle-offset))) * -100), -1), 1);
-    grid-area: 1/1;
-    translate: calc(cos(var(--angle) + var(--angle-offset)) * var(--radius) * var(--inline-ratio)) calc(sin(var(--angle) + var(--angle-offset)) * var(--radius) * var(--block-ratio) * -1);
-    animation: adjust-angle linear 40s infinite reverse var(--animation-state);
-  }
-}
-.choose__avatar-link-wrapper {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  text-decoration: none;
-  color: var(--text-1);
-}
-.choose__avatar-link-wrapper:is(:hover, :focus-visible, :active) {
-  --avatar-img-scale: 1.1;
-  --avatar-opacity: 1;
-  --tooltip-opacity: 1;
-  --tooltip-visibility: visible;
-}
-@media (width < 1024px) {
-  .choose__avatar-link-wrapper {
-    flex-direction: column;
-    gap: 16px;
-  }
-}
-.choose__visual {
-  aspect-ratio: 1;
-  border-radius: 50%;
-  box-shadow: 0 2px 4px 0 oklch(0 0 0/10%);
-  max-width: 144px;
-  width: 100%;
-  opacity: var(--avatar-opacity);
-  overflow: clip;
-  transition: opacity 0.3s ease;
-}
-@media (width >= 1024px) {
-  .choose__visual {
-    max-width: 250px;
-  }
-}
-.choose__avatar-img {
-  background-color: var(--surface-2);
-  block-size: 100%;
-  display: block;
-  inline-size: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  scale: var(--avatar-img-scale, 1);
-  transition: scale 0.3s ease;
-}
-.choose__tooltiptext {
+.choose__blocks {
+  position: absolute;
   display: grid;
-  gap: 4px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  width: 100%;
+  max-width: 600px;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  gap: 32px;
 }
 @media (width >= 1024px) {
-  .choose__tooltiptext {
-    position: absolute;
-    font-size: 1.25rem;
-    opacity: var(--tooltip-opacity);
-    transition-duration: 0.3s;
-    transition-property: opacity, visibility;
-    transition-timing-function: ease;
-    translate: 110% 0;
-    visibility: var(--tooltip-visibility);
-    pointer-events: none;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-            user-select: none;
-  }
-  @container style(--direction: -1) {
-    .choose__tooltiptext {
-      text-align: end;
-      translate: -110% 0;
-    }
+  .choose__blocks {
+    max-width: none;
   }
 }
-@keyframes adjust-angle {
-  to {
-    --angle: 360deg;
+@media (max-width: 1023px) {
+  .choose__blocks {
+    position: static;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto auto;
+    gap: 16px;
+    width: 100%;
+    max-width: 600px;
+    margin-top: 24px;
+  }
+}
+.choose__block {
+  max-width: 450px;
+  width: 100%;
+  font-size: 1.5rem;
+  text-align: center;
+  color: var(--beige);
+  background: var(--zian-green);
+  border-radius: 30px;
+  box-shadow: -2px 5px 15px 0px rgba(0, 0, 0, 0.5);
+  padding: 25px;
+}
+@media (width >= 1024px) {
+  .choose__block {
+    position: absolute;
+  }
+  .choose__block:nth-child(1) {
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -100%);
+  }
+  .choose__block:nth-child(2) {
+    top: 20%;
+    right: 10%;
+    transform: translate(40%, 40%);
+  }
+  .choose__block:nth-child(3) {
+    bottom: 0;
+    left: 5%;
+    transform: translate(-25%, -172%);
+  }
+  .choose__block:nth-child(4) {
+    bottom: 0;
+    left: 25%;
+    transform: translate(-50%, 100%);
+  }
+  .choose__block:nth-child(5) {
+    bottom: 0;
+    right: 25%;
+    transform: translate(50%, 100%);
+  }
+}
+@media (max-width: 1023px) {
+  .choose__block {
+    position: static;
+    width: 100%;
+  }
+  .choose__block:nth-child(1), .choose__block:nth-child(2), .choose__block:nth-child(3) {
+    grid-column: span 1;
+  }
+  .choose__block:nth-child(4), .choose__block:nth-child(5) {
+    grid-column: span 3;
+    display: flex;
+    justify-content: space-between;
   }
 }
 
@@ -675,27 +665,59 @@ header {
 .lessons {
   padding: var(--block-padding);
 }
-.lessons__top-blocks {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  align-items: center;
-  gap: 20px;
-}
-.lessons__top-block {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-.lessons__item {
-  font-size: 1.75rem;
-  line-height: 1.5;
-}
 .lessons__title-wrap {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 25px;
   margin-bottom: 80px;
+}
+.lessons__blocks {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  gap: 20px;
+}
+.lessons__block {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  height: 100%;
+}
+.lessons__block_left {
+  justify-content: space-evenly;
+}
+.lessons__top-block {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.lessons__bottom-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+}
+.lessons__item {
+  font-size: 1.75rem;
+  line-height: 1.5;
+}
+.lessons__link {
+  display: inline-block;
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-decoration: none;
+  color: var(--beige);
+  background-color: var(--zian-green);
+  border-radius: 30px;
+  transition: opacity 0.3s ease;
+  padding: 20px;
+}
+.lessons__link:hover {
+  opacity: 0.8;
+}
+.lessons__link:active {
+  background-color: var(--zian-green-active);
 }
 .lessons__main-img {
   display: block;
@@ -766,14 +788,18 @@ header {
   margin-top: 16px;
 }
 .lessons__button {
-  background-color: var(--zian-green);
-  color: var(--beige);
+  background-color: var(--grey-lemon-green);
+  color: var(--dark-grey);
   font-weight: bold;
   border: none;
   outline: none;
   border-radius: 10px;
   cursor: pointer;
   padding: 8px;
+}
+.lessons__button:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s;
 }
 @media (min-width: 1024px) {
   .lessons__button {
@@ -900,6 +926,12 @@ header {
 .questions {
   background-color: var(--white);
   padding: var(--block-padding);
+  background-image: url("../img/thai-flag.png");
+  background-position: 6% 19%;
+  background-size: 20%;
+  background-repeat: no-repeat;
+  position: relative;
+  background-repeat: no-repeat;
 }
 .questions__title {
   padding-bottom: 30px;
@@ -918,7 +950,7 @@ header {
   overflow: hidden;
   border-radius: 30px;
   border-top: 1px solid var(--dark-grey);
-  box-shadow: 1px 1px 11px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 1px 1px 11px 0px rgba(0, 0, 0, 0.8);
 }
 .questions__expand {
   display: flex;
@@ -926,20 +958,20 @@ header {
   background-color: var(--zian-green);
   text-decoration: none;
   cursor: pointer;
-  padding: 15px;
+  padding: 30px;
 }
 .questions__question {
-  margin: 0;
-  padding: 0;
   font-weight: 700;
   font-size: 1.5rem;
+  margin: 0;
+  padding: 0;
 }
 .questions__answer {
   background-color: var(--grey-lemon-green);
   color: var(--dark-grey);
   display: none;
   line-height: 22px;
-  padding: 20px;
+  padding: 30px;
 }
 .questions__text {
   font-size: 1.25rem;
@@ -961,4 +993,43 @@ header {
 }
 .questions__link:hover {
   text-decoration: underline;
+}
+
+/* Footer */
+.footer {
+  padding: var(--block-padding);
+  background-color: var(--zian-green);
+  color: var(--beige);
+}
+.footer__wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  font-size: 1.25rem;
+}
+.footer__contacts {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  max-width: 400px;
+}
+.footer__social {
+  display: flex;
+  gap: 10px;
+}
+.footer__link {
+  max-width: 50px;
+  height: auto;
+}
+.footer__img {
+  max-width: 50px;
+  height: auto;
+  transition: transform 0.3s ease;
+}
+.footer__img:hover {
+  transform: scale(1.1);
+}
+.footer__img:active {
+  opacity: 0.8;
 }/*# sourceMappingURL=styles.css.map */
